--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <section id="react"></section>
-    <script src="dist/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
