update app after day's work

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <section id="react"></section>
     <script src="bundle.js"></script>
+    <script src="words.js"></script>
   </body>
 </html>
